# pyshup

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/pyshup/: AST.py  DSL.py  __init__.py
src/tests/: conftest.py  test_AST.py  test_DSL.py
