[project]
name = "pyshup"
version = "0.1.2"
authors = [
    {name = "James Hammer", email = "YetAnotherYames@gmail.com"},
]
description = "Python embedded DSL for generating shell scripts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
keywords = ["python", "shell", "script", "scripting", "transpile", "codegen", "DSL"]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.urls]
Homepage = "https://github.com/JustAnotherJames/pyshup"
Issues = "https://github.com/JustAnotherJames/pyshup/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting (replaces isort)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["src/tests"]
